--- a/src/app/events/cricketmatchs/schedule-views/schedule-views.component.html
+++ b/src/app/events/cricketmatchs/schedule-views/schedule-views.component.html
@@ -1,5 +1,6 @@
 <app-nav-bar></app-nav-bar>
-
+<div id="background"  >
+  <div id="backgroundIN" >
 <br>
 <div>
   <div class="row">
@@ -14,7 +15,7 @@
 
 
       <!--start card part 1 -->
-      <div>
+      <div *ngIf="result">
         <hr style="border-top: 1px dotted rgb(197, 175, 175);">
         <div class="container">
           <div>
@@ -22,7 +23,7 @@
               <b>{{result.schDate|date}}</b>
           </div>
         </div>
-        <div id="card">
+        <div >
           <div class="row">
       
             <!-- start card 1 -->
@@ -168,66 +169,11 @@
       <!-- end card part 1-->
 
       <!--start card part 2 -->
-      <!-- <div>
-        <hr style="border-top: 1px dotted rgb(197, 175, 175);">
-        <div class="container">
-          <div>
-            <h4>Second Round Match</h4>
-          </div>
-        </div>
-        <div id="card">
-          <div class="row">
-      
-            <div class="col-lg-3 col-sm-12 container">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">First Match</h5>
-                  <hr>
-                  <p class="card-text">Group A Winner</p>
-                  <p class="card-text">Group B Winner</p>
-                </div>
-              </div>
-            </div>
-
-             <div class="col-lg-3 col-sm-12 container">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Second Match</h5>
-                  <hr>
-                  <p class="card-text">Group C Winner</p>
-                  <p class="card-text">Group D Winner</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-sm-12 container">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Third Match</h5>
-                  <hr>
-                  <p class="card-text">Group E Winner</p>
-                  <p class="card-text">Group F Winner</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-sm-12 container">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Fourth Match</h5>
-                  <hr>
-                  <p class="card-text">Group G Winner</p>
-                  <p class="card-text">Group H Winner</p>
-                </div>
-              </div>
-            </div> 
-      
-          </div>
-        </div>
-      </div> -->
-      <!-- end card part -->
+    
 
     </div>
    
   </div>
+</div>
+</div>
 </div>
