--- a/src/app/pastevent/imageview/imageview.component.css
+++ b/src/app/pastevent/imageview/imageview.component.css
@@ -78,3 +78,23 @@
 opacity: 100%;
 
 }
+
+
+#background{
+  
+  top: 0;
+  left: 0;
+  background-image: url('../../../assets/Back/back14.jpg');
+  width: 100%;
+  
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 750px;
+}
+#backgroundIN{
+  background-color: rgba(182, 179, 179, 0.699);
+  width: 100%;
+
+  min-height: 750px;
+}
