--- a/src/app/task/contacts/contacts.component.html
+++ b/src/app/task/contacts/contacts.component.html
@@ -37,7 +37,7 @@
                 <!-- body -->
                 <form [formGroup]="AddContactForm" (ngSubmit)="addContacts(AddContactForm.value)">
 
-                        <div id="label">Name of Owner:</div>
+                        <div id="label">Name:</div>
                         <input class="form-control" type="text" formControlName="oname" required>
 
                         <div id="label">Address:</div>
