--- a/src/app/events/cricketmatchs/email-alert/email-alert.component.css
+++ b/src/app/events/cricketmatchs/email-alert/email-alert.component.css
@@ -8,3 +8,21 @@ p{
 .date{
     text-align: right;
 }
+#background{
+  
+    top: 0;
+    left: 0;
+    background-image: url('./../../../../assets/Back/back9.jpg');
+    width: 100%;
+    height: 100%;
+    min-height: 750px;
+    z-index: -1;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  #backgroundIN{
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 100%;
+    height: 100%;
+    min-height: 750px;
+  }
