--- a/src/app/events/cricketmatchs/schedule-views/schedule-views.component.css
+++ b/src/app/events/cricketmatchs/schedule-views/schedule-views.component.css
@@ -1,5 +1,6 @@
 .card{
     margin: 1em 0em;
+    background-color: rgba(206, 205, 205, 0.76);
 }
 
 #vs{
@@ -7,3 +8,22 @@
     font-size: 2.5em;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+
+#background{
+  
+    top: 0;
+    left: 0;
+    background-image: url('./../../../../assets/Back/back12.jpg');
+    width: 100%;
+    height: 100%;
+    min-height: 750px;
+    z-index: -1;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  #backgroundIN{
+    background-color: rgba(102, 102, 102, 0.7);
+    width: 100%;
+    height: 100%;
+    min-height: 750px;
+  }
