--- a/src/app/events/cricketmatchs/team-form/team-form.component.css
+++ b/src/app/events/cricketmatchs/team-form/team-form.component.css
@@ -13,3 +13,22 @@
     -webkit-box-shadow: 0 10px 30px 0 rgba(63,63,63, 0.4);
     box-shadow: 0 10px 30px 0 rgba(63, 63, 63, 0.4);
 }
+
+#background{
+  
+    top: 0;
+    left: 0;
+    background-image: url('./../../../../assets/Back/back2.jpg');
+    width: 100%;
+    height: 100%;
+    min-height: 750px;
+    z-index: -1;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  #backgroundIN{
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 100%;
+    height: 100%;
+    min-height: 750px;
+  }
