--- a/src/app/events/cricketmatchs/team-view/team-view.component.css
+++ b/src/app/events/cricketmatchs/team-view/team-view.component.css
@@ -6,3 +6,21 @@
    margin-bottom: 1em;
 }
 
+#background{
+  
+    top: 0;
+    left: 0;
+    background-image: url('./../../../../assets/Back/back9.jpg');
+    width: 100%;
+    height: 100%;
+    min-height: 750px;
+    z-index: -1;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  #backgroundIN{
+    background-color: rgba(107, 106, 106, 0.7);
+    width: 100%;
+    height: 100%;
+    min-height: 750px;
+  }
