--- a/src/app/events/cricketmatchs/team-view/team-view.component.html
+++ b/src/app/events/cricketmatchs/team-view/team-view.component.html
@@ -1,4 +1,6 @@
 <app-nav-bar></app-nav-bar>
+<div id="background"  >
+  <div id="backgroundIN" >
 <br>
 <div>
   <!-- start header card -->
@@ -11,9 +13,9 @@
       <button type="button" (click)="redirectToTeamSchedule()" class="btn btn-link">Team Schedule</button>
     </div>
 
-    <div class="col-sm-12 col-md-1"></div>
+    <div  class="col-sm-12 col-md-1"></div>
   
-    <div class="col-sm-12 col-md-4 my-auto">
+    <div  *ngIf="event"  class="col-sm-12 col-md-4 my-auto">
       <div class="card-body">
         <h2 class="card-title"><i>{{event.eventTitle}}</i></h2>
         <h4> Date : {{event.startDate |date}}</h4>
@@ -24,7 +26,7 @@
     <div class="col-sm-12 col-md-3">
       <div class="card w-100">
         <div class="card" id="zoom1">
-          <img class="card-img-top" [src]="ImageUrl+event.eventImageUrl" alt="Card image cap">
+          <img *ngIf="event"  class="card-img-top" [src]="ImageUrl+event.eventImageUrl" alt="Card image cap">
         </div>
       </div>
     </div>
@@ -71,7 +73,7 @@
                 <li class="list-group-item"><small><b>Date : </b> {{team.registerdate|date}}</small></li>
               </ul>
               <div class="card-body">
-                <button (click)="deleteCard(team.id)" (click)="delete()" class="btn btn-link">Delete</button>
+                <button *ngIf="IsAdmin||IsRC" (click)="deleteCard(team.id)" (click)="delete()" class="btn btn-link">Delete</button>
               </div>
             </div>
       
@@ -88,3 +90,5 @@
   </div>
 </div>
 
+</div>
+</div>
