--- a/src/app/events/update-event/update-event.component.html
+++ b/src/app/events/update-event/update-event.component.html
@@ -59,12 +59,12 @@
                             <em *ngIf="validateControl('StartDate') && hasError('StartDate', 'required')">*EventStartDate is required!</em>
                             
                         </div>
-                        <div class="form-group col-md-12">
+                        <div class="form-group col-md-12" *ngIf="closingDate">
                                  <input type="date" class="form-control" formControlName="ClosingDate" id="ClosingDate" required>
                                 <label >Closing Date</label>
 
                             </div>
-                            <div class="form-group col-md-12">
+                            <div class="form-group col-md-12" *ngIf="endDate">
                                      <input type="date" class="form-control" formControlName="EndDate" id="EndDate" required>
                                      <label >End Date</label>
 
