--- a/src/app/events/view-employee/view-employee.component.html
+++ b/src/app/events/view-employee/view-employee.component.html
@@ -1,5 +1,5 @@
 <app-nav-bar></app-nav-bar>
-<div id="background" *ngIf="event"  >
+<div id="background"  >
         <div id="backgroundIN" >
 
 <br><br>
