--- a/src/app/events/view-event-page/view-event-page.component.html
+++ b/src/app/events/view-event-page/view-event-page.component.html
@@ -17,13 +17,20 @@
           </div>
           <div class="col-md-6 col-sm-10" >
             <br>
+            
               <h4 id="h2" class="card-text">Date: {{event.startDate | date}}</h4>
               <h3 id="h2" *ngIf="destination"class="card-text">Destination: {{event.destination}}</h3>
-              <h3 id="h2" *ngIf="venue" class="card-text">Venue: {{event.venue}}</h3>
+              <h3 id="h2" *ngIf="venue" class="card-text">Venue: {{event.venue}}  <button id="teamviewbtn" *ngIf="event.eventTypeId==1" class="btn"  (click)="TeamView(event.id)">Team View</button></h3>
           </div>
         </div>
   
-        <div class="row">           
+        <div class="row">  
+            <div class="col-md-6">
+                <div class="card-img-bottom" id="division">
+                    <img class="card-img " id="image" style="width: 100%; height: 450px;"[src]="ImageUrl+event.eventImageUrl">
+    
+                </div>
+              </div>         
           <div class="col-md-6">
            
             <div class="card-block" id="dis">
@@ -42,12 +49,7 @@
             </div>
            
           </div>
-          <div class="col-md-6">
-            <div class="card-img-bottom" id="division">
-                <img class="card-img " id="image" style="width: 100%; height: 450px;"[src]="ImageUrl+event.eventImageUrl">
-
-            </div>
-          </div>
+         
         </div>
       </div>
     </div>
@@ -62,7 +64,7 @@
       </div>
       <div id="form" class="col-sm-9" *ngIf="this.form===null||!this.register">
       </div>
-      <div class="col-sm-1">
+      <div class="col-sm-1" *ngIf="this.IsAdmin||this.IsRC">
           <button type="button" class="btn btn-link"(click)="addRegistrationForm()" *ngIf="this.form===null">Add Registration Form</button>
           <button type="button" class="btn btn-link"(click)="updateEvent()">Update Event</button>
           <!-- <button type="button" class="btn btn-link" (click)="deleteEmployee(content)" *ngIf="this.form!=null">Delete Registered Employee</button> -->
@@ -75,7 +77,7 @@
           <br/>
   <div class="row mb-1">
   <div class="col-md-1"></div>
-      <div class="col-md-10">
+      <div class="col-md-10" *ngIf="this.IsAdmin||this.IsRC">
           <h4 class="border-bottom border-secondary pb-2 mb-0">Assign Task </h4>  
           <app-addtask></app-addtask>
         </div>
