--- a/src/app/pastevent/comment/comment.component.css
+++ b/src/app/pastevent/comment/comment.component.css
@@ -10,7 +10,7 @@ body {
   max-width: 100%; 
   font-family:sans-serif; 
   color:#333; 
-  background-color:#CCC;
+  background-color:rgba(204, 204, 204, 0.699);
   font-size:12pt;
 }
 h1 {
@@ -20,14 +20,14 @@ h1 {
   margin-bottom:2rem;
 }
 #comments {
-  background-color:#FFF;
+  background-color:rgba(255, 255, 255, 0.589);
   padding:1rem 2rem; 
   width: 100%;
 }
 .comment {
   position:relative; 
   margin:2rem 0 0 0;
-  background-color:#EEE; 
+  background-color:rgba(238, 238, 238, 0.562); 
   border:2px solid #AAA; 
   -webkit-border-radius:0.25rem; 
   -moz-border-radius:0.25rem; 
