--- a/src/app/pastevent/eventcard/eventcard.component.css
+++ b/src/app/pastevent/eventcard/eventcard.component.css
@@ -1,9 +1,9 @@
 
 .card-deck{
     margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 20%;
-    width: 25em;
+    padding-right: 10%;
+    padding-top: 20%;
+    width: 100%;
     
 
 }
@@ -27,3 +27,23 @@
 #crateAccountlink{
     color: brown;
 }
+#topic{
+    text-align: center;
+}
+
+#background{
+  
+    top: 0;
+    left: 0;
+    background-image: url('../../../assets/Back/back14.jpg');
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  #backgroundIN{
+    background-color: rgba(172, 169, 169, 0.623);
+    width: 100%;
+    height: 100%;
+  }
