--- a/src/app/pastevent/imageupload/imageupload.component.css
+++ b/src/app/pastevent/imageupload/imageupload.component.css
@@ -182,3 +182,22 @@
   transition: all .2s ease;
 } */
 /* ########## end drag and drop css */
+
+
+#background{
+  
+  top: 0;
+  left: 0;
+  background-image: url('../../../assets/Back/back13.jpg');
+  width: 100%;
+  min-height: 750px;
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#backgroundIN{
+  background-color: rgba(255, 255, 255, 0.7);
+  width: 100%;
+  height: 100%;
+  min-height: 750px;
+}
