--- a/src/app/pastevent/pastdetail/pastdetail.component.css
+++ b/src/app/pastevent/pastdetail/pastdetail.component.css
@@ -5,15 +5,7 @@
 
     background-image: url("/assets/_image/iii.jpg");
     height: 600px;
-    /* Add the blur effect */
-    /*
-    filter: blur(8px);
-    -webkit-filter: blur(8px);
-  */
-    /* Full height *//*
-    height: 100%; */
-  
-    /* Center and scale the image nicely */
+    
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -43,4 +35,8 @@ body,html {}
 }
 #backcolor{
   background-color: rgb(137, 158, 177);
+}
+#teamviewbtn{
+  position: relative;
+  left: 30%;
 }
