--- a/src/app/pastevent/pastdetail/pastdetail.component.html
+++ b/src/app/pastevent/pastdetail/pastdetail.component.html
@@ -1,24 +1,5 @@
-<!-- 
-  <div class="col-1">
-    <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-  
-      <div class="btn-group" role="group">
-        <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          <i class="fa fa-bars" aria-hidden="true">Menu</i>
 
-        </button>
-        <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-
-          <a class="dropdown-item"  (click)=gotoEventImages(event.id)>Images Gallery</a>
-
-          <a class="dropdown-item" href="pastevent/uploadpastevent">Create Past Event</a>
-          <a class="dropdown-item" href="pastevent/budget">More Details</a>
-        </div>
-      </div>
-    </div>
-  </div> -->
-  <div class="card w-100"  >
+  <div class="card w-100" *ngIf="event" >
     <div class="card-body">
       <h1 class="card-title">{{event.eventTitle}}</h1>
       <h3>{{event.startDate|date}}</h3>
@@ -29,13 +10,20 @@
 
         </div>
         <div class="col-sm-12 col-md-6">
-          <p class="card-text">{{event.venue}}</p>
-          <h3>{{event.endDate|date}}</h3>
+          <div class="card-text">
+            <h3 *ngIf="event.venue!='null'">{{event.venue}}</h3> <h3 *ngIf="event.destination!='null'">{{event.destination}}  </h3> 
+             <button id="teamviewbtn" *ngIf="event.eventTypeId==1" class="btn"  (click)="TeamView(event.id)">Team View</button></div>
+          
           <p class="card-text"> {{event.eventDescription}} </p>
+          <h5 *ngIf="event.endDate">End on:{{event.endDate|date}}</h5>
         </div>
+        
 
-        <h3 class="border-bottom border-gray">Tasks of {{event.eventTitle}}</h3>
         <div class="col-sm-12 col-md-10">
+            <a (click)=gotoEventImages(event.id) class="btn" id="btn">Gallery</a>
+            <br><br>
+            <h4 class="border-bottom border-gray">Tasks of {{event.eventTitle}}</h4>
+
           <div class="my-3 p-3 bg-white rounded box-shadow" *ngFor="let res of task">
             
             <div class="media text-muted pt-3">
@@ -54,6 +42,5 @@
   
       
      
-      <a (click)=gotoEventImages(event.id) class="btn" id="btn">Gallery</a>
     </div>
   </div>
