--- a/src/app/task/addtask/addtask.component.html
+++ b/src/app/task/addtask/addtask.component.html
@@ -92,6 +92,7 @@
                                             <b>End Date</b>                            
             
                                           <input  class="form-control" type="date" formControlName="EndDate" id="edate" (blur)="compareTwoDates()">
+                                          <em *ngIf="validateControl('EndDate') && hasError('EndDate', 'required')">*End date is required</em>
                                           <div *ngIf="error1.isError" style="font-style: italic" >
                                             {{ error1.errorMessage }}
                                          </div>                             
