--- a/src/app/events/cricketmatchs/schedule-view/schedule-view.component.css
+++ b/src/app/events/cricketmatchs/schedule-view/schedule-view.component.css
@@ -8,7 +8,9 @@
     font-size: 2.5em;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-
+.btn-link{
+    color: rgb(53, 53, 53);
+}
 #background{
   
     top: 0;
@@ -22,7 +24,7 @@
     background-size: cover;
   }
   #backgroundIN{
-    background-color: rgba(102, 102, 102, 0.7);
+    background-color: rgba(145, 143, 143, 0.7);
     width: 100%;
     height: 100%;
     min-height: 750px;
