--- a/src/app/events/cricketmatchs/team-view/team-view.component.css
+++ b/src/app/events/cricketmatchs/team-view/team-view.component.css
@@ -19,8 +19,11 @@
     background-size: cover;
   }
   #backgroundIN{
-    background-color: rgba(107, 106, 106, 0.7);
+    background-color: rgba(172, 172, 172, 0.7);
     width: 100%;
     height: 100%;
     min-height: 750px;
   }
+  .btn-link{
+    color: rgb(53, 53, 53);
+}
