--- a/src/app/pastevent/imageview/imageview.component.html
+++ b/src/app/pastevent/imageview/imageview.component.html
@@ -28,7 +28,7 @@
                     <div class="modal-header"></div>
                     <div class="modal-body">
                       <!-- modal viewing -->
-                      <img class="card w-200" [src]="ImageUrl+i.imageId" alt="Cinque Terre">
+                      <img width="475px" class="card" [src]="ImageUrl+i.imageId" alt="Cinque Terre">
                     </div>
                     <div class="modal-footer"></div>
                   </ng-template>
