--- a/src/app/pastevent/comment/comment.component.css
+++ b/src/app/pastevent/comment/comment.component.css
@@ -62,3 +62,13 @@ h1 {
   font-size: 70%;
   text-align: right;
 }
+.body{
+  background-color: rgb(34, 120, 120);
+  
+}
+#comments{
+  background-color: rgba(62, 206, 107, 0.49); 
+}
+#imagee{
+  vertical-align: 60%;
+}
