--- a/src/app/pastevent/pastdetail/pastdetail.component.css
+++ b/src/app/pastevent/pastdetail/pastdetail.component.css
@@ -18,9 +18,11 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
-/*
-body,html {}
-*/
+
+body {
+  background-color: rgb(101, 255, 255);
+}
+
 .h1{
   text-decoration-color: antiquewhite;
 }
@@ -43,4 +45,7 @@ body,html {}
 }
 #backcolor{
   background-color: rgb(137, 158, 177);
+}
+#colorr{
+  background-color: rgb(255, 81, 0);
 }
